# Wifi

./: CMakeLists.txt  README.md
src/: UtilitariosRede.cpp  UtilitariosRede.h  Wifi.cpp  Wifi.h  lwipopts.h  lwipopts_fragmento_http_cliente.h  lwipopts_fragmento_http_servidor.h  lwipopts_fragmento_mqtt.h.h
